loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:4: error: not found: value estSurOrange
  if (estSurOrange()){
      ^