loopdowhile.Poucet1.scala.code
var orange=0
while (orange!=2){
  avance()
  if (estSurOrange()){
    orange=orange+1
  }
  if (estFaceMur()){
    droite()
  }
}